--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Chilanka&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./fonts/Nunito.css">
     <link rel="stylesheet" href="./index.css">
-    <title>RxStat Admin</title>
+    <title>React Admin | Boiler Plate</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
